[gd_scene load_steps=12 format=3 uid="uid://coyu4ldvimyse"]

[ext_resource type="Script" uid="uid://ine6ple67je4" path="res://Scripts/Menu/home_menu_ui.gd" id="1_1stue"]
[ext_resource type="Texture2D" uid="uid://bi2ytywc8iuma" path="res://Assets/Sprites/home_menu.png" id="1_lpgi6"]
[ext_resource type="Texture2D" uid="uid://f3i5ghf0w8mo" path="res://Assets/Sprites/quest_icon.png" id="2_1stue"]
[ext_resource type="Texture2D" uid="uid://6fpgam5gf71b" path="res://Assets/Sprites/settings.png" id="3_7cvnn"]
[ext_resource type="PackedScene" uid="uid://to0c4eroteek" path="res://Scenes/close_btn.tscn" id="5_lo3vr"]
[ext_resource type="PackedScene" uid="uid://dh4aixootvo5w" path="res://Scenes/home_ui.tscn" id="6_7cvnn"]
[ext_resource type="PackedScene" uid="uid://b46lgfx1p243y" path="res://Scenes/quest_ui.tscn" id="7_c3axl"]
[ext_resource type="PackedScene" uid="uid://bvjw3u03pjndp" path="res://Scenes/effects_ui.tscn" id="8_cnmd1"]
[ext_resource type="PackedScene" uid="uid://bbhpoouridre6" path="res://Scenes/settings_ui.tscn" id="8_lo3vr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lo3vr"]
bg_color = Color(0.06879826, 0.06879829, 0.06879823, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cnmd1"]

[node name="HomeMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1stue")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lo3vr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 72.0
offset_bottom = 176.0
grow_horizontal = 2

[node name="Home" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.45882353, 0.20784314, 1)
icon = ExtResource("1_lpgi6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Effects" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.45882353, 0.20784314, 1)
icon = ExtResource("2_1stue")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Settings" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.45882353, 0.20784314, 1)
icon = ExtResource("3_7cvnn")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CloseBtn" parent="." instance=ExtResource("5_lo3vr")]
unique_name_in_owner = true
layout_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 211.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_cnmd1")

[node name="HomeUI" parent="PanelContainer" instance=ExtResource("6_7cvnn")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SettingsUI" parent="PanelContainer" instance=ExtResource("8_lo3vr")]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = null

[node name="EffectsUI" parent="PanelContainer" instance=ExtResource("8_cnmd1")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="QuestUI" parent="." instance=ExtResource("7_c3axl")]
unique_name_in_owner = true
visible = false
layout_mode = 1
